# Strategic_Alpha_Research_Engine

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: autopilot_runbook.ko.md  mvp_scope.ko.md  operational_readiness_checklist.ko.md  phase1_structured_generation_foundation.ko.md  phase2_incremental_delivery_plan.ko.md  phase3_learning_loop.ko.md  phase4_robust_validation.ko.md  phase5_submission_prep_layer.ko.md  phase6_autopilot_alpha_factory.ko.md  submission_packet_runbook.ko.md  target_greenfield_alpha_research_architecture.ko.md
settings/: brain.env.example  default.env  llm.env.example  local.env.example
src/strategic_alpha_engine/: __init__.py  __main__.py
src/strategic_alpha_engine/application/: __init__.py
src/strategic_alpha_engine/config/: __init__.py  settings.py
src/strategic_alpha_engine/domain/: __init__.py  base.py  common.py  critique_report.py  enums.py  evaluation.py  examples.py  expression_candidate.py  hypothesis_spec.py  metadata_catalog.py  promotion.py  research_agenda.py  review.py  search_policy.py  signal_blueprint.py  simulation.py  static_validation.py  validation.py
src/strategic_alpha_engine/infrastructure/: __init__.py
src/strategic_alpha_engine/interfaces/: __init__.py
src/strategic_alpha_engine/prompts/: __init__.py  library.py
src/strategic_alpha_engine/testing/: __init__.py  workflow_stubs.py
tests/unit/application/: test_agenda_generation.py  test_agenda_manager.py  test_family_analytics_builder.py  test_human_review_workflow.py  test_plan_workflow.py  test_research_once_workflow.py  test_state_contracts.py  (+13 more)
(+71 files in other folders)
