[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "strategic-alpha-engine"
version = "0.1.0"
description = "Greenfield strategic alpha research engine scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3.0",
  "requests>=2.32,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<0.12",
]

[project.scripts]
sae = "strategic_alpha_engine.interfaces.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/strategic_alpha_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
